--- a/src/fieldtextarea/index.less
+++ b/src/fieldtextarea/index.less
@@ -24,7 +24,7 @@
     min-width: 0; // for flex-shrink in field__button
     margin: 0;
     padding: 0;
-    color: @field-input-text-color;
+    color: var(--van-fieldtextarea-text-color);
     line-height: inherit;
     text-align: inherit;
     background-color: transparent;
@@ -32,15 +32,15 @@
     resize: none;
 
     &::placeholder {
-      color: @field-placeholder-text-color;
+      color: var(--van-fieldtextarea-placeholder-color);
     }
 
     &:disabled {
-      color: @field-input-disabled-text-color;
+      color: var(--van-fieldtextarea-disabled-color);
       cursor: not-allowed;
       opacity: 1;
       // fix disabled color in mobile safari
-      -webkit-text-fill-color: @field-input-disabled-text-color;
+      -webkit-text-fill-color: var(--van-fieldtextarea-disabled-color);
     }
 
     &:read-only {
@@ -60,7 +60,7 @@
     &--custom {
       display: flex;
       align-items: center;
-      min-height: @cell-line-height;
+      min-height: var(--van-fieldtextarea-line-height);
       height: 100%;
     }
 
@@ -68,7 +68,7 @@
     &[type='date'],
     &[type='time'],
     &[type='datetime-local'] {
-      min-height: @cell-line-height;
+      min-height: var(--van-fieldtextarea-line-height);
     }
 
     // for safari
