--- a/src-vusion/styles/theme.css
+++ b/src-vusion/styles/theme.css
@@ -762,6 +762,8 @@
   --van-grid-view-input-border-color: #e3e4e5; /* @type color */ /* @desc 输入框边框颜色 */
   --van-grid-view-input-border-radius: 3px; /* @desc 输入框圆角 */
   --van-grid-view-input-color: #333; /* @type color */ /* @desc 输入框文字颜色 */
+  --van-grid-view-placeholder-color: #c8c9cc; /* @type color */ /* @desc 输入框占位提示文字颜色 */
+
 
   /* @component van-cardu */
   --van-cardu-padding-bottom: 10px; /* @desc 底部内边距 */
@@ -782,6 +784,8 @@
   --van-list-view-input-border-color: #e3e4e5; /* @type color */ /* @desc 输入框边框颜色 */
   --van-list-view-input-border-radius: 3px; /* @desc 输入框圆角 */
   --van-list-view-input-color: #333; /* @type color */ /* @desc 输入框文字颜色 */
+  --van-list-view-placeholder-color: #c8c9cc; /* @type color */ /* @desc 输入框占位提示文字颜色 */
+
 
   /* @component van-fieldinput */
   --van-fieldinput-text-color: #333; /* @type color */ /* @desc 输入框文字颜色 */
