feat(cli): improve code highlight

--- a/packages/vant-cli/site/common/style/vars.less
+++ b/packages/vant-cli/site/common/style/vars.less
@@ -12,6 +12,7 @@
   --van-doc-gray-8: #323233;
   --van-doc-blue: #1989fa;
   --van-doc-green: #07c160;
+  --van-doc-purple: #8e69d3;
 
   // sizes
   --van-doc-padding: 32px;
@@ -21,6 +22,10 @@
   --van-doc-simulator-width: 360px;
   --van-doc-simulator-height: 620px;
   --van-doc-header-top-height: 64px;
+
+  // fonts
+  --van-doc-code-font-family: 'Menlo', 'Source Code Pro', 'Monaco',
+    'Inconsolata', monospace;
 }
 
 .van-doc-theme-light {
