fix: 修复cell组件在只设置value情况下，没有向左对齐的bug。

--- a/packages/vant/src/cell/index.less
+++ b/packages/vant/src/cell/index.less
@@ -43,6 +43,12 @@
     display: none;
   }
 
+  &--titleless {
+    .van-cell__value {
+      text-align: left;
+    }
+  }
+
   &__label {
     margin-top: var(--van-cell-label-margin-top);
     color: var(--van-cell-label-color);
