feat: ignore bottom border

--- a/src/cascader/index.less
+++ b/src/cascader/index.less
@@ -20,6 +20,9 @@
     .van-cascader__close-icon {
       display: none;
     }
+    .van-cellson::after {
+        display: none;
+    }
   }
 
   &__close-icon {
