--- a/packages/vant/src/text-ellipsis/index.less
+++ b/packages/vant/src/text-ellipsis/index.less
@@ -1,14 +1,14 @@
 :root {
-  --van-ellipsis-action-color: var(--van-blue);
+  --van-text-ellipsis-action-color: var(--van-blue);
 }
 
-.van-ellipsis {
+.van-text-ellipsis {
   line-height: 1.5;
   white-space: pre-wrap;
 
   &__action {
     cursor: pointer;
-    color: var(--van-ellipsis-action-color);
+    color: var(--van-text-ellipsis-action-color);
 
     &:active {
       opacity: var(--van-active-opacity);
