--- a/packages/vant/src/text-ellipsis/index.less
+++ b/packages/vant/src/text-ellipsis/index.less
@@ -1,9 +1,10 @@
 :root {
+  --van-text-ellipsis-line-height: 1.6;
   --van-text-ellipsis-action-color: var(--van-blue);
 }
 
 .van-text-ellipsis {
-  line-height: 1.5;
+  line-height: var(--van-text-ellipsis-line-height);
   white-space: pre-wrap;
 
   &__action {
