--- a/src/gallery/index.less
+++ b/src/gallery/index.less
@@ -1,3 +1,5 @@
+@import '../style/var';
+
 .van-gallery {
   position: relative;
   width: 100%;
@@ -9,28 +11,30 @@
   }
 
   .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    text-align: center;
+    background: #fff;
   }
 
   .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
+    -webkit-user-drag: none;
   }
+
   .pagi {
-    z-index: 1;
     position: absolute;
     right: 16px;
     bottom: 16px;
+    z-index: 1;
     padding: 2px 7px;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.4);
     color: #fff;
     font-size: 12px;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
   }
 }
