chore(Watermark): rename default slot to content

--- a/packages/vant/src/watermark/index.less
+++ b/packages/vant/src/watermark/index.less
@@ -12,6 +12,10 @@
   background-repeat: repeat;
   pointer-events: none;
 
+  &__wrapper {
+    display: none;
+  }
+
   &--full {
     position: fixed;
   }
