H5端滑块垂直展示功能异常 http://projectmanage.netease-official.lcap.163yun.com/dashboard/BugDetail?id=2589415795412224

--- a/src/slider/index.less
+++ b/src/slider/index.less
@@ -75,6 +75,9 @@
     display: inline-block;
     width: @slider-bar-height;
     height: 100%;
+    min-height: 40px;
+    padding-top:12px;
+    padding-bottom:12px;
 
     .van-slider__button-wrapper,
     .van-slider__button-wrapper-right {
