fix: ide中H5的root设置高度auto

--- a/src/style/third.less
+++ b/src/style/third.less
@@ -8,8 +8,10 @@
   box-sizing: border-box;
 }
 
+// 只有ide中才有root-app
 div[root-app] .l-root-h5 {
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   padding-bottom: 0;
 
   &>.van-divider:first-child {
