--- a/src/search/index.less
+++ b/src/search/index.less
@@ -13,8 +13,8 @@
     flex: 1;
     padding-left: @padding-sm;
     background-color: @search-content-background-color;
-    // border-radius: @border-radius-sm;
-    border-radius: 16px;
+    border-radius: @border-radius-sm;
+    // border-radius: 16px;
 
     &--round {
       border-radius: @border-radius-max;
