--- a/packages/vant/src/signature/index.less
+++ b/packages/vant/src/signature/index.less
@@ -1,6 +1,6 @@
 :root {
   --van-signature-padding: var(--van-padding-xs);
-  --van-signature-content-height: 160px;
+  --van-signature-content-height: 200px;
   --van-signature-content-background: var(--van-background-2);
   --van-signature-content-border: 1px dotted #dadada;
 }
@@ -15,6 +15,8 @@
     height: var(--van-signature-content-height);
     background-color: var(--van-signature-content-background);
     border: var(--van-signature-content-border);
+    border-radius: var(--van-radius-lg);
+    overflow: hidden;
   }
 
   &__footer {
@@ -22,7 +24,9 @@
     justify-content: flex-end;
 
     .van-button {
-      margin: 4px;
+      padding: 0 var(--van-padding-md);
+      margin-top: var(--van-padding-xs);
+      margin-left: var(--van-padding-xs);
     }
   }
 }
