--- a/packages/vant/src/barrage/index.less
+++ b/packages/vant/src/barrage/index.less
@@ -7,8 +7,6 @@
 
 .van-barrage {
   position: relative;
-  min-height: 150px;
-  width: 100%;
   overflow: hidden;
   &__item {
     position: absolute;
@@ -23,16 +21,17 @@
     font-weight: bold;
     white-space: nowrap;
     color: var(--van-barrage-color);
-    text-shadow: var(--van-gray-8) 1px 1px 2px;
+    text-shadow: 1px 0 1px #000000, 0 1px 1px #000000, 0 -1px 1px #000000,
+      -1px 0 1px #000000;
     user-select: none;
     will-change: transform;
-    transform: translateX(100%);
+    transform: translateX(110%);
   }
 }
 
-@keyframes barrage {
+@keyframes van-barrage {
   from {
-    transform: translateX(100%);
+    transform: translateX(110%);
   }
   to {
     transform: translateX(var(--move-distance));
