fix: set width important to style of van-dialog

--- a/packages/vant/src/dialog/index.less
+++ b/packages/vant/src/dialog/index.less
@@ -22,7 +22,7 @@
 
 .van-dialog {
   top: 45%;
-  width: var(--van-dialog-width);
+  width: var(--van-dialog-width) !important;
   overflow: hidden;
   font-size: var(--van-dialog-font-size);
   background: var(--van-dialog-background);
