feat(signature): Enhance signature clarity by devicePixelRatio

--- a/packages/vant/src/signature/index.less
+++ b/packages/vant/src/signature/index.less
@@ -17,6 +17,11 @@
     border: var(--van-signature-content-border);
     border-radius: var(--van-radius-lg);
     overflow: hidden;
+
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__footer {
