chore(Barrage): inherit font family by default

--- a/packages/vant/src/barrage/index.less
+++ b/packages/vant/src/barrage/index.less
@@ -1,7 +1,7 @@
 :root {
   --van-barrage-font-size: 16px;
   --van-barrage-space: 10px;
-  --van-barrage-font: -apple-system-font, helvetica neue, arial, sans-serif;
+  --van-barrage-font: inherit;
   --van-barrage-color: var(--van-white);
 }
 
