--- a/src/cell/index.less
+++ b/src/cell/index.less
@@ -12,7 +12,8 @@
   font-size: @cell-font-size;
   line-height: 22px;
   min-height: 50px;
-  background-color: @cell-background-color;
+  // 单元格背景色去除，防止遮住数据列表斑马纹展示
+  // background-color: @cell-background-color;
 
   &::after {
     // .hairline-bottom(@cell-border-color, @padding-md, @padding-md);
