fix: 数据列表分页、筛选问题修复

--- a/src-vusion/styles/theme.css
+++ b/src-vusion/styles/theme.css
@@ -796,9 +796,9 @@
 
   /* @component van-popup-combination */
   --popup-padding: 5px 12px; /* @desc 弹出层的内边距,如 1px */ /* @prefix popup */
-  --popup-arrow-size: 4px; /* @desc 弹出层的内层三角箭头大小,如 1px */ /* @prefix popup */
-  --popup-arrow-offset: 17px; /* @desc 弹出层的三角箭头平移位置,如 1px */ /* @prefix popup */
-  --popup-outer-arrow-size: calc(var(--popup-arrow-size) + 1px); /* @desc 弹出层的外层三角箭头大小,如 1px */ /* @prefix popup */
+  --popup-arrow-size: 4px; /* @group 箭头 */ /* @desc 弹出层的内层三角箭头大小,如 1px */ /* @prefix popup */
+  --popup-arrow-offset: 17px; /* @group 箭头 */ /* @desc 弹出层的三角箭头平移位置,如 1px */ /* @prefix popup */
+  --popup-outer-arrow-size: calc(var(--popup-arrow-size) + 1px); /* @group 箭头 */ /* @desc 弹出层的外层三角箭头大小,如 1px */ /* @prefix popup */
   --popup-background: white; /* @type color */ /* @desc 弹出层的背景色,如 #223325 */ /* @prefix popup */
   --popup-box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); /* @desc 弹出层的阴影效果,如 2px 2px 2px 1px rgba(0, 0, 0, 0.2); */ /* @prefix popup */
   --popup-border-color: var(--border-color-base); /* @type color */ /* @desc 弹出层的边框颜色,如 #223325 */ /* @prefix popup */
