fix: 修复van-field包含textarea时的渲染死循环问题

--- a/src/fieldtextarea/index.less
+++ b/src/fieldtextarea/index.less
@@ -64,6 +64,10 @@
       height: 100%;
     }
 
+    &--min-height {
+      min-height: @field-text-area-min-height;
+    }
+
     // for ios wechat
     &[type='date'],
     &[type='time'],
