--- a/src/cell/index.less
+++ b/src/cell/index.less
@@ -14,6 +14,7 @@
   min-height: 50px;
   // 单元格背景色去除，防止遮住数据列表斑马纹展示
   // background-color: @cell-background-color;
+  background: transparent;
 
   &::after {
     // .hairline-bottom(@cell-border-color, @padding-md, @padding-md);
