--- a/src/cell/index.less
+++ b/src/cell/index.less
@@ -12,9 +12,7 @@
   font-size: @cell-font-size;
   line-height: 22px;
   min-height: 50px;
-  // 单元格背景色去除，防止遮住数据列表斑马纹展示
-  // background-color: @cell-background-color;
-  background: transparent;
+  background-color: @cell-background-color;
 
   &::after {
     // .hairline-bottom(@cell-border-color, @padding-md, @padding-md);
