--- a/src/number-keyboard/index.less
+++ b/src/number-keyboard/index.less
@@ -122,6 +122,12 @@
     }
   }
 
+  &--finish {
+    font-size: @number-keyboard-delete-font-size;
+    color: @number-keyboard-button-text-color;
+    background-color: @number-keyboard-finish-button-background-color;
+  }
+
   &__wrapper {
     position: relative;
     flex: 1;
