--- a/src/password-input/index.less
+++ b/src/password-input/index.less
@@ -23,6 +23,7 @@
 
   &__security {
     display: flex;
+    gap: @password-input-cell-gap;
     width: 100%;
     height: @password-input-height;
     cursor: pointer;
