--- a/src/style/var.less
+++ b/src/style/var.less
@@ -545,6 +545,7 @@
 @number-keyboard-close-font-size: @font-size-md;
 @number-keyboard-button-text-color: @white;
 @number-keyboard-button-background-color: @blue;
+@number-keyboard-finish-button-background-color: var(--van-number-keyboard-finish-button-background-color);
 @number-keyboard-cursor-color: @text-color;
 @number-keyboard-cursor-width: 1px;
 @number-keyboard-cursor-height: 40%;
@@ -582,6 +583,7 @@
 @password-input-error-info-color: @red;
 @password-input-dot-size: 10px;
 @password-input-dot-color: @black;
+@password-input-cell-gap: var(--van-password-input-cell-gap);
 
 // Picker
 @picker-background-color: var(--van-picker-background-color);
