fix: 单行输入聚焦时边框与普通边框冲突

--- a/src/fieldinput/index.less
+++ b/src/fieldinput/index.less
@@ -13,9 +13,9 @@
     }
 
     &--focused {
-      border-style: solid;
-      border-color: var(--van-fieldinput-focused-border-color);
-      border-width: var(--van-fieldinput-focused-border-width);
+      border-style: solid !important;
+      border-color: var(--van-fieldinput-focused-border-color) !important;
+      border-width: var(--van-fieldinput-focused-border-width) !important;
     }
   }
   &__control {
