chore: update style

--- a/packages/vant/src/rolling-text/index.less
+++ b/packages/vant/src/rolling-text/index.less
@@ -42,7 +42,7 @@
 }
 
 .van-rolling-text-item--down {
-  &__box {
+  .van-rolling-text-item__box {
     transform: translateY(var(--van-translate));
 
     &--animate {
