--- a/packages/vant/src/floating-bubble/index.less
+++ b/packages/vant/src/floating-bubble/index.less
@@ -1,6 +1,7 @@
 :root {
   --van-floating-bubble-size: 48px;
-  --van-floating-bubble-initial-space: 24px;
+  --van-floating-bubble-initial-gap: 24px;
+  --van-floating-bubble-icon-size: 28px;
   --van-floating-bubble-background: var(--van-primary-color);
   --van-floating-bubble-color: var(--van-background-2);
   --van-floating-bubble-z-index: 999;
@@ -10,8 +11,8 @@
   position: fixed;
   left: 0;
   top: 0;
-  right: var(--van-floating-bubble-initial-space);
-  bottom: var(--van-floating-bubble-initial-space);
+  right: var(--van-floating-bubble-initial-gap);
+  bottom: var(--van-floating-bubble-initial-gap);
   width: var(--van-floating-bubble-size);
   height: var(--van-floating-bubble-size);
   box-sizing: border-box;
@@ -33,6 +34,6 @@
   }
 
   &__icon {
-    font-size: 28px;
+    font-size: var(--van-floating-bubble-icon-size);
   }
 }
