fix(Pagination): display the border correctly

--- a/packages/vant/src/pagination/index.less
+++ b/packages/vant/src/pagination/index.less
@@ -70,8 +70,8 @@
       cursor: pointer;
     }
 
-    &--border::after {
-      border-width: var(--van-border-width);
+    &--border:first-child:after {
+      border-right-width: var(--van-border-width);
     }
 
     &--disabled {
